--- a/stocktrade/src/main/resources/templates/cadastro.html
+++ b/stocktrade/src/main/resources/templates/cadastro.html
@@ -1,99 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-
-    <title>StockTrade - Cadastro</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-    <!-- Custom styles for this template -->
-    <link href="css/stylesheet.css" rel="stylesheet" />
-
-    <link rel="icon" type="image/x-icon" href="images/only-logo-bg-off.png" />
-  </head>
+  <head
+    th:replace="~{fragments/headFragment :: head('StockTrade - Cadastro')}"
+  ></head>
 
   <body>
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
-      <div class="container-fluid pt-3">
-        <header
-          class="d-flex align-items-center justify-content-between py-3 mb-4 no-flex-wrap mx-5"
-        >
-          <!-- logo -->
-          <a href="/">
-            <img
-              src="images/logo-bg-off.png"
-              alt="Logo"
-              class="img-fluid logo small-logo2 me-5"
-            />
-          </a>
-
-          <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
-            <li>
-              <a
-                href="/"
-                class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a
-                href="invista"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Invista</a
-              >
-            </li>
-            <li>
-              <a
-                href="sobre"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Sobre</a
-              >
-            </li>
-            <li>
-              <a
-                href="contato"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Contato</a
-              >
-            </li>
-          </ul>
-
-          <div class="col-md-3 text-end">
-            <a href="login" class="btn btn-outline-primary botao1 me-4"
-              >Login</a
-            >
-            <a href="cadastro" class="btn btn-outline-primary botao1 me-4"
-              >Cadastre-se</a
-            >
-          </div>
-        </header>
-      </div>
+      <div th:replace="~{fragments/headerFragment :: header}"></div>
 
       <div class="container-fluid container-img-background2">
         <div class="row justify-content-end">
@@ -186,76 +101,7 @@
         </div>
       </div>
 
-      <footer class="footer py-3 container-fluid mt-5">
-        <div
-          class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
-        >
-          <!-- Logo à esquerda -->
-          <a href="/">
-            <img
-              src="images/logo-bg-off.png"
-              alt="Logo"
-              class="img-fluid logo small-logo2 me-5 ms-5"
-            />
-          </a>
-
-          <!-- Imagens à direita -->
-          <div class="d-flex">
-            <img
-              src="images/insta.png"
-              alt="Instagram"
-              class="img-fluid logo small-logo me-1"
-            />
-
-            <img
-              src="images/facebook.png"
-              alt="Facebook"
-              class="img-fluid logo small-logo me-1"
-            />
-
-            <img
-              src="images/linkedin.png"
-              alt="LinkedIn"
-              class="img-fluid logo small-logo me-1"
-            />
-          </div>
-        </div>
-
-        <div
-          class="mx-5 d-flex justify-content-between align-items-center pb-2 ps-5"
-        >
-          <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
-            <li>
-              <a
-                href="/"
-                class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a
-                href="invista"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Invista</a
-              >
-            </li>
-            <li>
-              <a
-                href="sobre"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Sobre</a
-              >
-            </li>
-            <li>
-              <a
-                href="contato"
-                class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-                >Contato</a
-              >
-            </li>
-          </ul>
-        </div>
-      </footer>
+      <footer th:replace="~{fragments/footerFragment :: footer}"></footer>
     </main>
 
     <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
@@ -368,4 +214,3 @@
     </script>
   </body>
 </html>
-  
